// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildPackages 1`] = `
Object {
  "apps": Object {
    "sep": Object {
      "adapter": "none",
      "command": "command.sh",
      "environment": Object {
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/usr/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu/pulseaudio:$SNAP/usr/lib/x86_64-linux-gnu/mesa-egl:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "TMPDIR": "$XDG_RUNTIME_DIR",
      },
      "plugs": Array [
        "desktop",
        "desktop-legacy",
        "home",
        "x11",
        "unity7",
        "browser-support",
        "network",
        "gsettings",
        "pulseaudio",
        "opengl",
      ],
    },
  },
  "architectures": Array [
    "amd64",
  ],
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "snap/gui/icon.png",
  "name": "sep",
  "parts": Object {
    "app": Object {
      "after": Array [
        "desktop-gtk2",
      ],
      "build-packages": Array [
        "foo1",
        "default",
        "foo2",
      ],
      "plugin": "nil",
      "stage-packages": Array [
        "libasound2",
        "libgconf2-4",
        "libnotify4",
        "libnspr4",
        "libnss3",
        "libpcre3",
        "libpulse0",
        "libxss1",
        "libxtst6",
      ],
    },
    "desktop-gtk2": Object {
      "install": "set -x
export XDG_DATA_DIRS=$SNAPCRAFT_PART_INSTALL/usr/share
update-mime-database $SNAPCRAFT_PART_INSTALL/usr/share/mime

for dir in $SNAPCRAFT_PART_INSTALL/usr/share/icons/*/; do
  if [ -f $dir/index.theme ]; then
    if which gtk-update-icon-cache-3.0 &> /dev/null; then
      gtk-update-icon-cache-3.0 -q $dir
    elif which gtk-update-icon-cache &> /dev/null; then
      gtk-update-icon-cache -q $dir
    fi
  fi
done",
      "stage": Array [
        "-./usr/share/fonts/**",
      ],
    },
  },
  "summary": "Sep",
  "version": "1.1.0",
}
`;

exports[`buildPackages 2`] = `
Object {
  "linux": Array [],
}
`;

exports[`custom after, no desktop 1`] = `
Object {
  "apps": Object {
    "sep": Object {
      "adapter": "none",
      "command": "command.sh",
      "environment": Object {
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/usr/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu/pulseaudio:$SNAP/usr/lib/x86_64-linux-gnu/mesa-egl:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "TMPDIR": "$XDG_RUNTIME_DIR",
      },
      "plugs": Array [
        "desktop",
        "desktop-legacy",
        "home",
        "x11",
        "unity7",
        "browser-support",
        "network",
        "gsettings",
        "pulseaudio",
        "opengl",
      ],
    },
  },
  "architectures": Array [
    "amd64",
  ],
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "snap/gui/icon.png",
  "name": "sep",
  "parts": Object {
    "app": Object {
      "after": Array [
        "bar",
      ],
      "plugin": "nil",
      "stage-packages": Array [
        "libasound2",
        "libgconf2-4",
        "libnotify4",
        "libnspr4",
        "libnss3",
        "libpcre3",
        "libpulse0",
        "libxss1",
        "libxtst6",
      ],
    },
  },
  "summary": "Sep",
  "version": "1.1.0",
}
`;

exports[`custom after, no desktop 2`] = `
Object {
  "linux": Array [],
}
`;

exports[`custom env 1`] = `
Object {
  "apps": Object {
    "sep": Object {
      "command": "command.sh",
      "environment": Object {
        "FOO": "bar",
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/usr/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu/pulseaudio:$SNAP/usr/lib/x86_64-linux-gnu/mesa-egl:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "TMPDIR": "$XDG_RUNTIME_DIR",
      },
      "plugs": Array [
        "desktop",
        "desktop-legacy",
        "home",
        "x11",
        "unity7",
        "browser-support",
        "network",
        "gsettings",
        "pulseaudio",
        "opengl",
      ],
    },
  },
  "architectures": Array [
    "amd64",
  ],
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "name": "sep",
  "summary": "Sep",
  "version": "1.1.0",
}
`;

exports[`custom env 2`] = `
Object {
  "linux": Array [],
}
`;

exports[`default stagePackages 1`] = `
Object {
  "apps": Object {
    "sep": Object {
      "adapter": "none",
      "command": "command.sh",
      "environment": Object {
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/usr/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu/pulseaudio:$SNAP/usr/lib/x86_64-linux-gnu/mesa-egl:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "TMPDIR": "$XDG_RUNTIME_DIR",
      },
      "plugs": Array [
        "desktop",
        "desktop-legacy",
        "home",
        "x11",
        "unity7",
        "browser-support",
        "network",
        "gsettings",
        "pulseaudio",
        "opengl",
      ],
    },
  },
  "architectures": Array [
    "amd64",
  ],
  "confinement": "classic",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "snap/gui/icon.png",
  "name": "sep",
  "parts": Object {
    "app": Object {
      "after": Array [
        "desktop-gtk2",
      ],
      "plugin": "nil",
      "stage-packages": Array [
        "libasound2",
        "libgconf2-4",
        "libnotify4",
        "libnspr4",
        "libnss3",
        "libpcre3",
        "libpulse0",
        "libxss1",
        "libxtst6",
      ],
    },
    "desktop-gtk2": Object {
      "install": "set -x
export XDG_DATA_DIRS=$SNAPCRAFT_PART_INSTALL/usr/share
update-mime-database $SNAPCRAFT_PART_INSTALL/usr/share/mime

for dir in $SNAPCRAFT_PART_INSTALL/usr/share/icons/*/; do
  if [ -f $dir/index.theme ]; then
    if which gtk-update-icon-cache-3.0 &> /dev/null; then
      gtk-update-icon-cache-3.0 -q $dir
    elif which gtk-update-icon-cache &> /dev/null; then
      gtk-update-icon-cache -q $dir
    fi
  fi
done",
      "stage": Array [
        "-./usr/share/fonts/**",
      ],
    },
  },
  "summary": "Sep",
  "version": "1.1.0",
}
`;

exports[`default stagePackages 2`] = `
Object {
  "linux": Array [],
}
`;

exports[`default stagePackages 3`] = `
Object {
  "apps": Object {
    "sep": Object {
      "adapter": "none",
      "command": "command.sh",
      "environment": Object {
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/usr/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu/pulseaudio:$SNAP/usr/lib/x86_64-linux-gnu/mesa-egl:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "TMPDIR": "$XDG_RUNTIME_DIR",
      },
      "plugs": Array [
        "desktop",
        "desktop-legacy",
        "home",
        "x11",
        "unity7",
        "browser-support",
        "network",
        "gsettings",
        "pulseaudio",
        "opengl",
        "custom",
      ],
    },
  },
  "architectures": Array [
    "amd64",
  ],
  "confinement": "classic",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "snap/gui/icon.png",
  "name": "sep",
  "parts": Object {
    "app": Object {
      "after": Array [
        "desktop-gtk2",
      ],
      "plugin": "nil",
      "stage-packages": Array [
        "libasound2",
        "libgconf2-4",
        "libnotify4",
        "libnspr4",
        "libnss3",
        "libpcre3",
        "libpulse0",
        "libxss1",
        "libxtst6",
        "custom",
      ],
    },
    "desktop-gtk2": Object {
      "install": "set -x
export XDG_DATA_DIRS=$SNAPCRAFT_PART_INSTALL/usr/share
update-mime-database $SNAPCRAFT_PART_INSTALL/usr/share/mime

for dir in $SNAPCRAFT_PART_INSTALL/usr/share/icons/*/; do
  if [ -f $dir/index.theme ]; then
    if which gtk-update-icon-cache-3.0 &> /dev/null; then
      gtk-update-icon-cache-3.0 -q $dir
    elif which gtk-update-icon-cache &> /dev/null; then
      gtk-update-icon-cache -q $dir
    fi
  fi
done",
      "stage": Array [
        "-./usr/share/fonts/**",
      ],
    },
  },
  "summary": "Sep",
  "version": "1.1.0",
}
`;

exports[`default stagePackages 4`] = `
Object {
  "linux": Array [],
}
`;

exports[`default stagePackages 5`] = `
Object {
  "apps": Object {
    "sep": Object {
      "adapter": "none",
      "command": "command.sh",
      "environment": Object {
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/usr/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu/pulseaudio:$SNAP/usr/lib/x86_64-linux-gnu/mesa-egl:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "TMPDIR": "$XDG_RUNTIME_DIR",
      },
      "plugs": Array [
        "custom",
        "desktop",
        "desktop-legacy",
        "home",
        "x11",
        "unity7",
        "browser-support",
        "network",
        "gsettings",
        "pulseaudio",
        "opengl",
      ],
    },
  },
  "architectures": Array [
    "amd64",
  ],
  "confinement": "classic",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "snap/gui/icon.png",
  "name": "sep",
  "parts": Object {
    "app": Object {
      "after": Array [
        "desktop-gtk2",
      ],
      "plugin": "nil",
      "stage-packages": Array [
        "custom",
        "libasound2",
        "libgconf2-4",
        "libnotify4",
        "libnspr4",
        "libnss3",
        "libpcre3",
        "libpulse0",
        "libxss1",
        "libxtst6",
      ],
    },
    "desktop-gtk2": Object {
      "install": "set -x
export XDG_DATA_DIRS=$SNAPCRAFT_PART_INSTALL/usr/share
update-mime-database $SNAPCRAFT_PART_INSTALL/usr/share/mime

for dir in $SNAPCRAFT_PART_INSTALL/usr/share/icons/*/; do
  if [ -f $dir/index.theme ]; then
    if which gtk-update-icon-cache-3.0 &> /dev/null; then
      gtk-update-icon-cache-3.0 -q $dir
    elif which gtk-update-icon-cache &> /dev/null; then
      gtk-update-icon-cache -q $dir
    fi
  fi
done",
      "stage": Array [
        "-./usr/share/fonts/**",
      ],
    },
  },
  "summary": "Sep",
  "version": "1.1.0",
}
`;

exports[`default stagePackages 6`] = `
Object {
  "linux": Array [],
}
`;

exports[`default stagePackages 7`] = `
Object {
  "apps": Object {
    "sep": Object {
      "adapter": "none",
      "command": "command.sh",
      "environment": Object {
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/usr/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu/pulseaudio:$SNAP/usr/lib/x86_64-linux-gnu/mesa-egl:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "TMPDIR": "$XDG_RUNTIME_DIR",
      },
      "plugs": Array [
        "foo1",
        "desktop",
        "desktop-legacy",
        "home",
        "x11",
        "unity7",
        "browser-support",
        "network",
        "gsettings",
        "pulseaudio",
        "opengl",
        "foo2",
      ],
    },
  },
  "architectures": Array [
    "amd64",
  ],
  "confinement": "classic",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "snap/gui/icon.png",
  "name": "sep",
  "parts": Object {
    "app": Object {
      "after": Array [
        "desktop-gtk2",
      ],
      "plugin": "nil",
      "stage-packages": Array [
        "foo1",
        "libasound2",
        "libgconf2-4",
        "libnotify4",
        "libnspr4",
        "libnss3",
        "libpcre3",
        "libpulse0",
        "libxss1",
        "libxtst6",
        "foo2",
      ],
    },
    "desktop-gtk2": Object {
      "install": "set -x
export XDG_DATA_DIRS=$SNAPCRAFT_PART_INSTALL/usr/share
update-mime-database $SNAPCRAFT_PART_INSTALL/usr/share/mime

for dir in $SNAPCRAFT_PART_INSTALL/usr/share/icons/*/; do
  if [ -f $dir/index.theme ]; then
    if which gtk-update-icon-cache-3.0 &> /dev/null; then
      gtk-update-icon-cache-3.0 -q $dir
    elif which gtk-update-icon-cache &> /dev/null; then
      gtk-update-icon-cache -q $dir
    fi
  fi
done",
      "stage": Array [
        "-./usr/share/fonts/**",
      ],
    },
  },
  "summary": "Sep",
  "version": "1.1.0",
}
`;

exports[`default stagePackages 8`] = `
Object {
  "linux": Array [],
}
`;

exports[`no desktop plugs 1`] = `
Object {
  "apps": Object {
    "sep": Object {
      "command": "command.sh",
      "environment": Object {
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/usr/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu/pulseaudio:$SNAP/usr/lib/x86_64-linux-gnu/mesa-egl:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "TMPDIR": "$XDG_RUNTIME_DIR",
      },
      "plugs": Array [
        "foo",
        "bar",
      ],
    },
  },
  "architectures": Array [
    "amd64",
  ],
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "name": "sep",
  "summary": "Sep",
  "version": "1.1.0",
}
`;

exports[`no desktop plugs 2`] = `
Object {
  "linux": Array [],
}
`;

exports[`plugs option 1`] = `
Object {
  "apps": Object {
    "testapp": Object {
      "adapter": "none",
      "command": "command.sh",
      "environment": Object {
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/usr/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu/pulseaudio:$SNAP/usr/lib/x86_64-linux-gnu/mesa-egl:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "TMPDIR": "$XDG_RUNTIME_DIR",
      },
      "plugs": Array [
        "browser-sandbox",
        "another-simple-plug-name",
      ],
    },
  },
  "architectures": Array [
    "amd64",
  ],
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "snap/gui/icon.png",
  "name": "testapp",
  "parts": Object {
    "app": Object {
      "after": Array [
        "desktop-gtk2",
      ],
      "plugin": "nil",
      "stage-packages": Array [
        "libasound2",
        "libgconf2-4",
        "libnotify4",
        "libnspr4",
        "libnss3",
        "libpcre3",
        "libpulse0",
        "libxss1",
        "libxtst6",
      ],
    },
    "desktop-gtk2": Object {
      "install": "set -x
export XDG_DATA_DIRS=$SNAPCRAFT_PART_INSTALL/usr/share
update-mime-database $SNAPCRAFT_PART_INSTALL/usr/share/mime

for dir in $SNAPCRAFT_PART_INSTALL/usr/share/icons/*/; do
  if [ -f $dir/index.theme ]; then
    if which gtk-update-icon-cache-3.0 &> /dev/null; then
      gtk-update-icon-cache-3.0 -q $dir
    elif which gtk-update-icon-cache &> /dev/null; then
      gtk-update-icon-cache -q $dir
    fi
  fi
done",
    },
  },
  "plugs": Object {
    "browser-sandbox": Object {
      "allow-sandbox": true,
      "interface": "browser-support",
    },
  },
  "summary": "Test App ßW",
  "version": "1.1.0",
}
`;

exports[`plugs option 2`] = `
Object {
  "linux": Array [],
}
`;

exports[`plugs option 3`] = `
Object {
  "apps": Object {
    "testapp": Object {
      "adapter": "none",
      "command": "command.sh",
      "environment": Object {
        "LD_LIBRARY_PATH": "$SNAP_LIBRARY_PATH:$SNAP/usr/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu/pulseaudio:$SNAP/usr/lib/x86_64-linux-gnu/mesa-egl:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH:$SNAP/lib:$SNAP/usr/lib:$SNAP/lib/x86_64-linux-gnu:$SNAP/usr/lib/x86_64-linux-gnu",
        "PATH": "$SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH",
        "TMPDIR": "$XDG_RUNTIME_DIR",
      },
      "plugs": Array [
        "browser-sandbox",
        "another-simple-plug-name",
      ],
    },
  },
  "architectures": Array [
    "amd64",
  ],
  "confinement": "strict",
  "description": "Test Application (test quite “ #378)",
  "grade": "stable",
  "icon": "snap/gui/icon.png",
  "name": "testapp",
  "parts": Object {
    "app": Object {
      "after": Array [
        "desktop-gtk2",
      ],
      "plugin": "nil",
      "stage-packages": Array [
        "libasound2",
        "libgconf2-4",
        "libnotify4",
        "libnspr4",
        "libnss3",
        "libpcre3",
        "libpulse0",
        "libxss1",
        "libxtst6",
      ],
    },
    "desktop-gtk2": Object {
      "install": "set -x
export XDG_DATA_DIRS=$SNAPCRAFT_PART_INSTALL/usr/share
update-mime-database $SNAPCRAFT_PART_INSTALL/usr/share/mime

for dir in $SNAPCRAFT_PART_INSTALL/usr/share/icons/*/; do
  if [ -f $dir/index.theme ]; then
    if which gtk-update-icon-cache-3.0 &> /dev/null; then
      gtk-update-icon-cache-3.0 -q $dir
    elif which gtk-update-icon-cache &> /dev/null; then
      gtk-update-icon-cache -q $dir
    fi
  fi
done",
    },
  },
  "plugs": Object {
    "browser-sandbox": Object {
      "allow-sandbox": true,
      "interface": "browser-support",
    },
  },
  "summary": "Test App ßW",
  "version": "1.1.0",
}
`;

exports[`plugs option 4`] = `
Object {
  "linux": Array [],
}
`;

exports[`snap 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "sep_1.1.0_amd64.snap",
    },
  ],
}
`;

exports[`snap electron 2 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "sep-electron2_v1.1.0.snap",
    },
  ],
}
`;

exports[`snap full 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "se-wo-template_1.1.0_amd64.snap",
    },
  ],
}
`;

exports[`snap full electron 2 1`] = `
Object {
  "linux": Array [
    Object {
      "arch": "x64",
      "file": "se-electron2_1.1.0_amd64.snap",
    },
  ],
}
`;
